<resources>
    <string name="app_name">Socify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communities">Find like minded people having same interests. Grow and enrich yourself with the perfect communities</string>
    <string name="buddyText">Can\'t find friends? or people like you? We have it all. Make college friends and chat with them</string>
    <string name="Queries">Have a query? Ask queries and questions and help others solve their doubts. Making doubt solving immersive. </string>
    <string name="Events">Every single event in the college counts, make sure to be a part of it. Participate in events.</string>
    <string name="splash_text">SOCIFY</string>
    <string name="welocme">Welcome</string>
    <string name="verification_info">You  will receive a One Time Password on this phone number</string>
    <string name="enter_phone_text">Enter your phone number</string>
    <string name="get_otp_btn">Get OTP</string>
    <string name="enter_otp_info">Enter OTP received on your phone number</string>
    <string name="otp_sent_info">Didn\'t\ Receive\,\ </string>
    <string name="resend_text">Resend</string>
    <string name="searchhint">Eg : IIT Delhi</string>
    <string name="dots">&#8942;</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed nibh eget sapien rutrum venenatis ut eget ligula. Curabitur faucibus molestie egestas. Suspendisse potenti. Nam dictum molestie arcu. Quisque tempus diam non elit fermentum, ac faucibus mi aliquam. Suspendisse odio arcu, ultricies vel metus eget, elementum auctor massa. Pellentesque lacinia quis nulla sed sollicitudin. Fusce quis enim a enim convallis dignissim. Fusce viverra sem in turpis hendrerit, at malesuada dolor elementum. Integer volutpat, tortor in euismod commodo, risus turpis ullamcorper mauris, nec sagittis ligula nisl finibus massa. In posuere risus purus, et posuere lacus rutrum eget. Proin eu felis eu nisl dictum gravida.</string>
    <string name="username">\@kumarshi</string>
    <string name="title_activity_all_chat">AllChat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="profile_username">\@kumarshi</string>
    <string name="androidwhat">Any application developed to be supported by the Android Operating system using the android software development kit (sdk) on android studio is the process of android development.</string>
    <string name="musicwhatis">Music is an art form that combines either vocal or instrumental sounds, sometimes both, using form, harmony, and expression of emotion to convey an idea. Music represents many different forms that play key factors in cultures around the world.</string>
    <string name="photographywhatis">Photography is the art, application, and practice of creating durable images by recording light, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film.</string>
    <string name="ccodingwhatis">Competitive programming is a mind sport usually held over the Internet or a local network, involving participants trying to program according to provided specifications. Contestants are referred to as sport programmers.</string>
    <string name="sportswhatis">Sport pertains to any form of competitive physical activity or game that aims to use, maintain, or improve physical ability and skills while providing enjoyment to participants and, in some cases, entertainment to spectators.</string>
    <string name="fitnesswhatis">Fitness is a broad term that means something different to each person, but it refers to your own optimal health and overall well-being. It defines every aspect of your health. Smart eating and active living are fundamental to fitness.</string>
    <string name="dancewhatis">The movement of the body in a rhythmic way, usually to music and within a given space, for the purpose of expressing an idea or emotion, releasing energy, or simply taking delight in the movement itself.</string>
    <string name="foodwhatis">Substance consisting essentially of protein, carbohydrate, fat, and other nutrients used in the body of an organism to sustain growth and vital processes and to furnish energy. Good food makes everything great.</string>
    <string name="artwhatis"><![CDATA[Art & design is a field where different visual media like painting, drawing, sculpture, and graphic designs are made. Art and design majors learn basic design principles, color theory, critical thinking, and artistic techniques.]]></string>
    <string name="programmingwhatis">Programming is the process of creating a set of instructions that tell a computer how to perform a task. Programming can be done using a variety of computer programming languages, such as JavaScript, Python, C and C++.</string>
    <string name="commskillswhatis">Communication skills are the abilities you use when giving and receiving different kinds of information. Some examples include communicating new ideas, feelings or even an update on your project. Good communication skills help you a lot.</string>
    <string name="aptiwhatis">Reasoning is a process of evaluation. Aptitude is capability. For example, if someone has an aptitude for math then they can reason out the processes more easily. Aptitude is certain capability like thinking deeply, logically, learning technical subjects etc</string>
    <string name="civilwhatis">Civil engineering is a professional engineering discipline that deals with the design, construction, and maintenance of the physical and naturally built environment, including public works such as roads, bridges, canals and sewage systems etc.</string>
    <string name="mechwhatis">It is an engineering branch that combines engineering physics and mathematics principles with materials science, to design, analyze, manufacture, and maintain mechanical systems. It is one of the oldest and broadest of the engineering branches.</string>
    <string name="electwhatis">Electrical engineering is an engineering discipline concerned with the study, design, and application of equipment, devices, and systems which use electricity, electronics, and electromagnetism.</string>
    <string name="ecewhatis">It is a sub-discipline of electrical engineering which emerged in the early 20th century and is distinguished by the additional use of active components such as semiconductor devices to amplify and control electric current flow.</string>
    <string name="mbawhatis">A Master of Business Administration is a postgraduate degree focused on business administration. The core courses in an MBA program cover various areas of business administration such as accounting and applied statistics etc.</string>
    <string name="threedots">⋮</string>
    <string name="my_queries">Kick-start your brain. New ideas come from watching something, talking to people, experimenting, asking questions and getting out of the office!</string>
    <string name="my_club">The purpose of the Club is to provide a community for students interested  to gather and exchange ideas</string>
</resources>