<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dialog_close_icon"
        android:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:elevation="0dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp_info"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/chatfont"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintVertical_bias=".9" />

    <com.chaos.view.PinView
        android:id="@+id/otpInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        app:cursorColor="@color/palette_black"
        app:itemCount="6"
        app:itemHeight="45dp"
        app:itemRadius="5dp"
        app:itemWidth="45dp"
        android:textColor="#838383"
        android:layout_gravity="center"
        style="@style/PinWidget.PinView"
        app:layout_constraintHeight_percent=".065"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".75"
        app:lineColor="@color/palette_teal" />

    <TextView
        android:id="@+id/errortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="60dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_sent_info"
            android:textSize="15sp"
            android:fontFamily="@font/chatfont"
            android:textColor="@color/black"
            android:layout_gravity="center"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintHorizontal_bias=".38"/>

        <TextView
            android:id="@+id/resendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_text"
            android:fontFamily="@font/chatfont"
            android:textColor="@color/teal_700"
            android:textSize="15sp"
            android:layout_gravity="center" />

    </GridLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/otpSubmitButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/verification_button_bg"
        android:text="Verify and register"
        android:textColor="@color/white"
        android:fontFamily="@font/chatfontmedium"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>


</LinearLayout>